package component.item;

import utils.EquipmentUtils;

public class RefineIron extends Item {
    public RefineIron() {
        super("Refine Iron", EquipmentUtils.getRefineIronImage());
    }

    @Override
    public void use() {

    }
}
