package component.item.equipment;

@FunctionalInterface
interface Refinable {
    void upgrade(boolean useIron);
}
